<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/round_info_24"
            android:title="@string/tv_nav_item_01" />
        <item
            android:id="@+id/nav_people"
            android:icon="@drawable/round_people_24"
            android:title="@string/tv_nav_item_02" />
        <item
            android:id="@+id/nav_food_drink"
            android:icon="@drawable/round_fastfood_24"
            android:title="@string/tv_nav_item_03" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/round_local_activity_24"
            android:title="@string/tv_nav_item_04" />
    </group>

    <item android:title="@string/item_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
